# aho-view2

./: .gitignore  DESIGN.md  README.md  main.py  pic.py  picaxiv.py  pyproject.toml  requirements.txt
scripts/: build.sh
src/: main.py
src/aho_view/: __main__.py
src/aho_view/core/: pic.py  picaxiv.py  zip_pic.py
src/aho_view/gui/: main_window.py
tests/: conftest.py  test_discover_archives.py  test_main_window.py  test_pic.py  test_picaxiv.py  test_zip_picaxiv.py
