[project]
name = "aho-view"
version = "0.1.0"
description = "A simple and fast image viewer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.10.1",
]

[project.scripts]
aho-view = "aho_view.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aho_view"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
